target_sources(stan_math_unit_tests PRIVATE
        test_ad.hpp
        test_ad_test.cpp
        util.hpp
        util_test.cpp)

add_subdirectory(prim/arr/err)
add_subdirectory(prim/arr/fun)
add_subdirectory(prim/arr/functor)
add_subdirectory(prim/arr/meta)
add_subdirectory(prim/arr/prob)
add_subdirectory(prim/mat)
add_subdirectory(prim/scal/err)
add_subdirectory(prim/scal/fun)
add_subdirectory(prim/scal/meta)
add_subdirectory(prim/scal/prob)
add_subdirectory(fwd/arr/fun)
add_subdirectory(fwd/arr/meta)
add_subdirectory(fwd/core)
add_subdirectory(fwd/mat)
add_subdirectory(fwd/scal/fun)
add_subdirectory(fwd/scal/meta)
add_subdirectory(fwd/scal/prob)
add_subdirectory(rev/arr)
add_subdirectory(rev/core)
add_subdirectory(rev/mat)
add_subdirectory(rev/scal)
add_subdirectory(mix/arr/fun)
add_subdirectory(mix/arr/meta)
add_subdirectory(mix/core)
add_subdirectory(mix/mat)
add_subdirectory(mix/scal/fun)
add_subdirectory(mix/scal/meta)
add_subdirectory(mix/scal/prob)
add_subdirectory(memory)